<resources>
    <string name="app_name">EpiLibre</string>
    <string name="menu_main_sign_in">Connexion</string>
    <string name="menu_main_sign_out">Déconnexion</string>
    <string name="login_tv_connection">Connexion</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Mot de passe</string>
    <string name="drawer_open">Ouvrir</string>
    <string name="drawer_close">Fermer</string>
    <string name="drawer_group_shop">Epicerie</string>
    <string name="drawer_group_users">Utilisateurs</string>
    <string name="drawer_item_products">Produits</string>
    <string name="drawer_item_categories">Categories</string>
    <string name="drawer_item_users">Utilisateurs</string>
    <string name="main_basket_title">Panier</string>
    <string name="main_add_product">Ajouter un produit</string>
    <string name="login_no_account">Pas encore de compte ?</string>
    <string name="login_register">Créer un compte</string>
    <string name="register_register">S\'enregistrer</string>
    <string name="register_firstname_hint">Prénom</string>
    <string name="register_name_hint">Nom</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Mot de passe</string>
    <string name="register_pasword_repeated_hint">Répétez le mot de passe</string>
    <string name="users_pending_main_title">Utilisateurs en attentes</string>
    <string name="users_pending_title_plural">utilisateurs en attentes</string>
    <string name="users_pending_no_data">Aucun utilisateur en attente</string>
    <string name="menu_search_search_item">Rechercher</string>
    <string name="products_search_no_results">Aucun résultat pour</string>
    <string name="products_title">Produits</string>
    <string name="no_internet_connection">Aucune connexion, veuillez vérifier votre connexion internet.</string>
    <string name="all_categories">Toutes les catégories</string>
    <string name="product_dialog_container">Contenant</string>
    <string name="product_dialog_weight">Poids du contenant</string>
    <string name="product_dialog_quantity">Quantité</string>
    <string name="products_admin_edit_successful">a bien été édité</string>
    <string name="products_admin_new_created">a bien été ajouté</string>
    <string name="product_edit_main_title">"Edition : "</string>
    <string name="product_edit_delete">Supprimer</string>
    <string name="product_hint_name">Nom</string>
    <string name="product_hint_price">Prix par unité (CHF)</string>
    <string name="product_edit_category">Catégorie</string>
    <string name="product_edit_unit">Unité</string>
    <string name="product_edit_edit">Editer</string>
    <string name="product_edit_image">Image</string>
    <string name="product_edit_last_update">Derniere modification</string>
    <string name="product_new_add">Ajouter</string>
    <string name="product_new_main_title">Ajouter un produit</string>
    <string name="main_checkout_btn_text">Valider</string>
    <string name="main_backet_add_btn_text">Ajouter</string>
    <string name="main_items_plurial">articles</string>
    <string name="main_items_singular">article</string>
    <string name="product_edit_choose_text">Choisir</string>
    <string name="main_buy_successful">L\'achat a bien été enregistré</string>
    <string name="drawer_item_orders">Ventes</string>
    <string name="orders_main_title">Ventes</string>
    <string name="order_details_main_title">Détail de vente</string>
    <string name="order_details_seller">Vendeur: </string>
    <string name="order_details_total_price">Total: </string>
    <string name="menu_send_send_item">Envoyer</string>
    <string name="order_details_no_message_client_found">Aucune application ne supporte l\'envoi de message</string>
    <string name="menu_download_download_item">Télécharger en CSV</string>
    <string name="orders_file_saved_download">Fichier sauvé dans les téléchargements</string>
    <string name="orders_open">Ouvrir</string>
    <string name="orders_permission_refused_msg">Impossible de télécharger les ventes sans autorisation</string>
    <string name="drawer_item_historic_prices">Historique des prix</string>
    <string name="no_result">Aucun résultat</string>
    <string name="menu_main_profile">Mon profil</string>
    <string name="profile_main_title">Mon profil</string>
    <string name="product_hint_firstname">Prénom</string>
    <string name="profile_hint_email">Email</string>
    <string name="profile_role">Role</string>
    <string name="profile_hint_role">Role</string>
    <string name="profile_btn_change_password">Changer le mot de passe</string>
    <string name="profile_btn_edit">Editer</string>
    <string name="profile_no_change">Aucun changement effectué</string>
    <string name="profile_update_successful">Votre profile a bien été mis à jour</string>
    <string name="profile_email_already_used">Cette adresse est déjà utilisée</string>
    <string name="users_main_title">Utilisateurs</string>
    <string name="users_edit_main_title">Edition d\'utilisateur</string>
    <string name="change_password_old_password_hint">Ancien mot de passe</string>
    <string name="change_password_password_hint">Nouveau mot de passe</string>
    <string name="change_password_repeat_password_hint">Répéter mot de passe</string>
    <string name="change_password_main_title">Changement de mot de passe</string>
    <string name="profile_pass_change_successful">Le mot de passe à bien été modifié</string>
    <string name="change_password_incorrect_old_password">Ancien mot de passe incorrect</string>
    <string name="drawer_item_stock">Stock</string>
    <string name="stock_main_title">Stock</string>
</resources>