<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/mainNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemTextColor="@color/grayDarker"
        app:itemIconTint="@color/grayDarker"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_drawer_header"
        android:layout_gravity="left"
        >

    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/main_basket_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mainTvTotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            tools:text="Total : 35.50 CHF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainRecycler"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <Button
                android:id="@+id/mainBtnCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_checkout_btn_text"
                android:drawableLeft="@drawable/ic_money"
                android:drawableTint="@color/white"
                android:layout_alignParentStart="true"
                android:visibility="gone"/>

            <Button
                android:id="@+id/mainBtnAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_backet_add_btn_text"
                app:icon="@drawable/ic_shopping_basket"
                app:iconTint="@color/white"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>